--- a/about_me.html
+++ b/about_me.html
@@ -27,7 +27,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-          
+      
       <div class="collapse navbar-collapse" id = "navbar">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -36,12 +36,9 @@
           <li class = "nav-item">
             <a class = "nav-link" href="about_me.html">About Me</a>
           </li>
-          <li class = "nav-item">
-            <a class = "nav-link" href="portfolio-page.html">Portfolio</a>
-          </li>
         </ul>
-        </div>
-      <input type="checkbox" checked data-toggle="toggle" data-onstyle="light" data-offstyle="outline-dark" data-on="Light" data-off="Dark" data-style="slow" data-size="sm">
+      </div>
+      <input id = "DarkLightToggle" type="checkbox" checked data-toggle="toggle" data-onstyle="light" data-offstyle="outline-dark" data-on="Light" data-off="Dark" data-style="slow" data-size="sm">
     </nav>
     <!-- End Bar -->
 
