--- a/index.html
+++ b/index.html
@@ -11,22 +11,8 @@
     <link rel="css_stylesheet" type="text/css" href="CSS/styling.css" />
     <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
 
+    <!-- Google Fonts -->
     <title>Amy's Personal Website</title>
-
-    <script>
-      function showDiv(name) {
-        var curr_div = document.getElementById(name);
-        
-        if (curr_div.style.display === "none") 
-        {
-          curr_div.style.display = "block";
-        } 
-        else 
-        {
-          curr_div.style.display = "none";
-        }
-      }
-    </script>
   </head>
   <body>
     <!-- Navigation Bar-->
@@ -47,12 +33,9 @@
           <li class = "nav-item">
             <a class = "nav-link" href="about_me.html">About Me</a>
           </li>
-          <li class = "nav-item">
-            <a class = "nav-link" href="portfolio-page.html">Portfolio</a>
-          </li>
         </ul>
       </div>
-      <input id = "DarkLightToggle"type="checkbox" checked data-toggle="toggle" data-onstyle="light" data-offstyle="outline-dark" data-on="Light" data-off="Dark" data-style="slow" data-size="sm">
+      <input id = "DarkLightToggle" type="checkbox" checked data-toggle="toggle" data-onstyle="light" data-offstyle="outline-dark" data-on="Light" data-off="Dark" data-style="slow" data-size="sm">
     </nav>
     <!-- End Bar -->
 
@@ -65,25 +48,17 @@
 
     <!-- Body Begin -->
 
-    <div class="text-center mxbtn-group btn-group-toggle" data-toggle="buttons">
-      <label class="btn btn-secondary active">
-        <input type="radio" name="options" id="software" onclick="showDiv('game-dev-projects')" autocomplete="off" checked> Software
-      </label>
-      <label class="btn btn-secondary">
-        <input type="radio" name="options" id="game-dev" onclick="showDiv('software-projects')" autocomplete="off"> Game Development
-      </label>
-      <label class="btn btn-secondary">
-        <input type="radio" name="options" id="3d-model" onclick="showDiv('3d-projects')" autocomplete="off"> 3D Modeling
-      </label>
-      <label class="btn btn-secondary">
-        <input type="radio" name="options" id="graphic-design" onclick="showDiv('graphic-projects')" autocomplete="off"> Graphic Design
-      </label>
+    <div class="text-center -btn-group" role="group">
+      <button onclick = "changeDiv('game-dev-projects')" class="btn btn-secondary" type="button" id="game-dev" autocomplete="off"> Game Development </button>
+      <button onclick = "changeDiv('software-projects')" class="btn btn-secondary" type="button" id="software" autocomplete="off" checked> Software </button>
+      <button onclick = "changeDiv('three-dim-projects')" class="btn btn-secondary" type="button" id="three-dimension" autocomplete="off"> 3D Modeling </button>
+      <button onclick = "changeDiv('graphic-design-projects')" class="btn btn-secondary" type="button" id="graphic-design" autocomplete="off"> Graphic Design </button>
     </div>
 
     <br>
 
     <section class="dark-sec">
-      <div class="container" id="game-dev-projects" style="display:none;">
+      <div class="container" id="game-dev-projects" style="display:block;">
         <div class="row">
           <div class="col-md-12 text-center style-class">
             <h3>Game Development</h3>
@@ -98,7 +73,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Watch people develop hardware products.
+                Play as Mall Santa, and brawl with mischevious kids.
               </div>
             </div>
           </div> 
@@ -110,7 +85,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Productivity + Marketing tool
+                Save the galaxy, uncover mysteries, and face challenges in dual perspectives as Boxman!
               </div>
             </div>
           </div> 
@@ -122,7 +97,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Super simple payment portal
+                Mobile Drawing Application where users build visual & sonic environments.
               </div>
             </div>
           </div> 
@@ -131,12 +106,12 @@
           <div class="card mb-4 shadow-sm">
             <div class="card-header">
               <div class="panel-body projects-panel-body text-center ">
-                <h4>Drawdio<h4>
+                <h4>Baking In The Woods<h4>
               </div>
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Watch people develop hardware products.
+                Bake bread in a serene forest cabin with gathered ingredients.
               </div>
             </div>
           </div> 
@@ -148,7 +123,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Productivity + Marketing tool
+                Be immersed in a nostalgic VR environment... interact, teleport, and customize.
               </div>
             </div>
           </div> 
@@ -160,7 +135,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Super simple payment portal
+                Classic game of tic-tac-toe where Xs vs. Os.
               </div>
             </div>
           </div> 
@@ -184,7 +159,7 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Watch people develop hardware products.
+                Gardening app for NJ crops, seasonal tips for success.
               </div>
             </div>
           </div> 
@@ -208,13 +183,12 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                Super simple payment portal
+                Track energy trends with Gas vs Oil vs Electric grid usage, promoting an efficiency analysis.
               </div>
             </div>
           </div> 
         </div>
-
-        <div class="card-deck mb-2 text-center" style="width: 15rem;">
+        <div class="card-deck mb-2 text-center">
           <div class="card mb-4 shadow-sm">
             <div class="card-header">
               <div class="panel-body projects-panel-body text-center ">
@@ -223,10 +197,220 @@
             </div>
             <div class = "card-body">
               <div class="panel-footer projects-panel-footer text-center">
-                words
+                WordPress site that showcases an IT business' services using language translation options.
               </div>
             </div>
           </div> 
+        </div>
+      </div>
+    </section>
+
+    <section class="dark-sec">
+      <div class="container" id="three-dim-projects" style="display:none;">
+        <div class="row">
+          <div class="col-md-12 text-center style-class">
+            <h3>3D Modeling</h3>
+          </div>
+        </div>
+        <div class="card-deck mb-2 text-center">
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center ">
+                <h4>The Dining Room<h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                Environmental model of a Victorian-inspired dining room.
+              </div>
+            </div>
+          </div> 
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center ">
+                <h4>Tinkerer Library</h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                Steampunk-inspired environment scene reflective of a robotic character and its personality.
+              </div>
+            </div>
+          </div> 
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center">
+                <h4>Flower Vases</h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                Complex and intricate model of a realistic flower-filled vase.
+              </div>
+            </div>
+          </div> 
+        </div>
+        <div class="card-deck mb-2 text-center">
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center ">
+                <h4>Individual Hand<h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                Realistic human hand designed using personal reference.
+              </div>
+            </div>
+          </div> 
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center ">
+                <h4>Amazon Box</h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                Model and rig of an Amazon delivery box.
+              </div>
+            </div>
+          </div> 
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center">
+                <h4>Steampunk Assets</h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                Props designed for a steampunk-inspired environment scene.
+              </div>
+            </div>
+          </div> 
+        </div>
+      </div>
+    </section>
+
+    <section class="dark-sec">
+      <div class="container" id="graphic-design-projects" style="display:none;">
+        <div class="row">
+          <div class="col-md-12 text-center style-class">
+            <h3>Graphic Design</h3>
+          </div>
+        </div>
+        <div class="card-deck mb-2 text-center">
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center ">
+                <h4>Nemenberg<h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                UI/UX website design for an IT business.
+              </div>
+            </div>
+          </div> 
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center ">
+                <h4>HomeSafe</h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                UI Designs for a Home Security mobile app
+              </div>
+            </div>
+          </div> 
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center">
+                <h4>Scavenger Hunt Case Study</h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                Super simple payment portal
+              </div>
+            </div>
+          </div> 
+        </div>
+        <div class="card-deck mb-2 text-center">
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center ">
+                <h4>BrilliantBooks<h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                Watch people develop hardware products.
+              </div>
+            </div>
+          </div> 
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center ">
+                <h4>Making Smoothies</h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                Experience map that outlines the smoothie making process
+              </div>
+            </div>
+          </div> 
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center">
+                <h4>PlantMe-NJ</h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                UI Designs for an NJ Gardening-based Android app
+              </div>
+            </div>
+          </div> 
+        </div>
+        <div class="card-deck mb-2 text-center">
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center ">
+                <h4>User Screen Variety<h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                Watch people develop hardware products.
+              </div>
+            </div>
+          </div> 
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center ">
+                <h4>Music Interaction</h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                UI Designs made for a melody playback on a Digital Audio Workspace (Max8) 
+              </div>
+            </div>
+          </div>
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center ">
+                <h4>Header</h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                Description 
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -238,7 +422,7 @@
       <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
         <p> Made using HTML, CSS, and Bootstrap</p>
         <!-- FIX: Use JS to display the current year date-->
-        <p> © 2023 </p>
+        <p> © 2024 </p>
       </div>    
     </footer>
     <!-- End Footer Box-->
@@ -251,5 +435,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+    <!-- Appearance Changes-->
+    <script src="Javascript/cards-change.js"></script>
+    <script src="Javascript/dark-light.js"></script>
   </body>
 </html>
