--- a/about_me.html
+++ b/about_me.html
@@ -6,7 +6,7 @@
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -66,7 +66,7 @@
             Graduating with a B.A. in Interactive Multimedia from The College of New Jersey, accompanied by minors in Computer Science and Music Technology, I bring a wealth of knowledge to the table. 
           </p>
           <p>
-            My proficiency spans software and game development, 3D modeling, graphic design, video editing, and photo restoration/retouching. 
+            My proficiency includes software and game development, 3D modeling, graphic design, video editing, and photo restoration/retouching. 
             I'm well-versed in programming languages like C#, JavaScript, and PostgreSQL, and adept in Adobe Suite programs such as Photoshop, Illustrator, and XD. 
           </p>
           <p>
