--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -49,10 +49,10 @@
     <!-- Body Begin -->
 
     <div class="text-center -btn-group" role="group">
-      <button onclick = "changeDiv('game-dev-projects')" class="btn btn-secondary" type="button" id="game-dev" autocomplete="off"> Game Development </button>
-      <button onclick = "changeDiv('software-projects')" class="btn btn-secondary" type="button" id="software" autocomplete="off" checked> Software </button>
-      <button onclick = "changeDiv('three-dim-projects')" class="btn btn-secondary" type="button" id="three-dimension" autocomplete="off"> 3D Modeling </button>
-      <button onclick = "changeDiv('graphic-design-projects')" class="btn btn-secondary" type="button" id="graphic-design" autocomplete="off"> Graphic Design </button>
+      <button onclick = "changeDiv('game-dev-projects')" class="btn btn-secondary m-2" type="button" id="game-dev" autocomplete="off"> Game Development </button>
+      <button onclick = "changeDiv('software-projects')" class="btn btn-secondary m-2" type="button" id="software" autocomplete="off" checked> Software </button>
+      <button onclick = "changeDiv('three-dim-projects')" class="btn btn-secondary m-2" type="button" id="three-dimension" autocomplete="off"> 3D Modeling </button>
+      <button onclick = "changeDiv('graphic-design-projects')" class="btn btn-secondary m-2" type="button" id="graphic-design" autocomplete="off"> Graphic Design </button>
     </div>
 
     <br>
@@ -93,6 +93,7 @@
               </div>
               <br>
               <a class="fa fa-github" href="https://github.com/A-Vargas-GP/Boxman_Game" style="color:#000000;" role="button"> </a>
+              <a class="fa fa-globe mx-2" href="https://play.unity.com/mg/other/boxmanwebgl" style="color:#000000;" role="button"> </a>
             </div>
           </div> 
         </div>
@@ -110,6 +111,7 @@
               </div>
               <br>
               <a class="fa fa-github" href="https://github.com/A-Vargas-GP/Drawdio-Application" style="color:#000000;" role="button"> </a>
+              <a class="fa fa-globe mx-2" href="https://a-varg.itch.io/drawdio" style="color:#000000;" role="button"> </a>
             </div>
           </div> 
           <div class="card mb-4 shadow-sm">
@@ -142,6 +144,7 @@
               </div>
               <br>
               <a class="fa fa-github" href="https://github.com/A-Vargas-GP/Baking_In_The_Woods" style="color:#000000;" role="button"> </a>
+              <a class="fa fa-globe mx-2" href="https://a-varg.itch.io/baking-in-the-woods" style="color:#000000;" role="button"> </a>
             </div>
           </div>  
           <div class="card mb-4 shadow-sm">
@@ -172,6 +175,21 @@
         </div>
         <div class="card-deck mb-2 text-center">
           <div class="card mb-4 shadow-sm">
+            <img class="card-img-top" src="images/cards/software/Nemenberg-Index.png" alt="Card image cap">
+            <div class="card-header">
+              <div class="panel-body projects-panel-body text-center">
+                <h4> <a href="projects_pages/software-projects.html">Nemenberg</a> </h4>
+              </div>
+            </div>
+            <div class = "card-body">
+              <div class="panel-footer projects-panel-footer text-center">
+                WordPress site that showcases an IT business' services using language translation options.
+              </div>
+              <br>
+              <a class="fa fa-globe" href="https://www.nemenberg.net" style="color:#000000;" role="button"> </a>
+            </div>
+          </div>
+          <div class="card mb-4 shadow-sm">
             <img class="card-img-top" src="images/cards/software/plantme_inverted_color.png" alt="Card image cap">
             <div class="card-header">
               <div class="panel-body projects-panel-body text-center">
@@ -185,7 +203,9 @@
               <br>
               <a class="fa fa-github" href="https://github.com/A-Vargas-GP/PlantMe-NJ_App" style="color:#000000;" role="button"> </a>
             </div>
-          </div> 
+          </div>
+        </div>
+        <div class="card-deck mb-2 text-center">
           <div class="card mb-4 shadow-sm">
             <img class="card-img-top" src="images/cards/software/accr-page.png" alt="Card image cap">
             <div class="card-header">
@@ -198,8 +218,6 @@
                 Pro-bono Hour tracking system with editable, storable, and exportable service details.              </div>
             </div>
           </div>
-        </div>
-        <div class="card-deck mb-2 text-center">
           <div class="card mb-4 shadow-sm">
             <img class="card-img-top" src="images/cards/software/ESPA-home-page.png" alt="Card image cap">
             <div class="card-header">
@@ -214,22 +232,7 @@
               <br>
               <a class="fa fa-github" href="https://github.com/A-Vargas-GP/Energy-Supply-Project-Analysis-ESPA" style="color:#000000;" role="button"> </a>
             </div>
-          </div> 
-          <div class="card mb-4 shadow-sm">
-            <img class="card-img-top" src="images/cards/software/Nemenberg-Index.png" alt="Card image cap">
-            <div class="card-header">
-              <div class="panel-body projects-panel-body text-center">
-                <h4> <a href="projects_pages/software-projects.html">Nemenberg</a> </h4>
-              </div>
-            </div>
-            <div class = "card-body">
-              <div class="panel-footer projects-panel-footer text-center">
-                WordPress site that showcases an IT business' services using language translation options.
-              </div>
-              <br>
-              <a class="fa fa-globe" href="https://www.nemenberg.net" style="color:#000000;" role="button"> </a>
-            </div>
-          </div> 
+          </div>  
         </div>
       </div>
     </section>
@@ -322,7 +325,7 @@
             </div>
           </div> 
           <div class="card mb-4 shadow-sm">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div id="threeDimCarouselControls" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img class = "card-img-top" src="images/cards/3d/steampunk-1.jpg" alt="First slide">
@@ -343,11 +346,11 @@
                   <img class = "card-img-top" src="images/cards/3d/steampunk-6.jpg" alt="Sixth slide">
                 </div>
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <a class="carousel-control-prev" href="#threeDimCarouselControls" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
               </a>
-              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <a class="carousel-control-next" href="#threeDimCarouselControls" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
