--- a/projects_pages/graphic-design-projects.html
+++ b/projects_pages/graphic-design-projects.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -40,7 +40,7 @@
     <!-- End Bar -->
 
     <!-- Body Text-->
-    <h1 class="text-center">Game Development Projects</h1>
+    <h1 class="text-center">Graphic Design Projects</h1>
     <p class="text-center"> Dates: 2019 to Current </p>
     <br>
 
